<resources>
    <string name="app_name">BECK Bus</string>


    <string-array name="station">
        <item>Riad Salam - Béni Mellal</item>
        <item>Ait Tislit - Béni Mellal</item>
        <item>Bradia - Béni Mellal</item>
        <item>Afourar - Béni Mellal</item>
        <item>Tagzert - Béni Mellal</item>
        <item>Fquih Ben Salah - Béni Mellal</item>
        <item>El Ksiba - Béni Mellal</item>
        <item>Sidi Jaber - Béni Mellal</item>
        <item>Ouled Ayad - Béni Mellal</item>
        <item>Foum Al Enser - Béni Mellal</item>
        <item>Zaouih Chikh - Béni Mellal</item>
        <item>Mghila - Béni Mellal</item>
        <item>Ouled Hamdan - Béni Mellal</item>
    </string-array>


    <string-array name="NbrBus">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="utilisateur">
        <item>Chauffeur</item>
        <item>Passager</item>
    </string-array>

    <string-array name="Anomalie">
        <item>Choisir une anomalie</item>
        <item>Retard ou Avance</item>
        <item>Point d\'arrêt non respecté</item>
        <item>Comportement du conducteur</item>
        <item>Surcharge</item>
        <item>Etat du véhicule</item>
        <item>Autre ...</item>
    </string-array>


    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BECK Bus</string>
    <string name="nav_header_subtitle">Number One BUS</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Mon profil</string>
    <string name="action_logout">Déconnexion</string>
    <string name="abonnement_mowadaf">L\'abonnement \'Mowadaf\' vous permet de voyager de façon illimitée en ne payant que 100Dhs/Ligne.</string>
    <string name="texte_rdv">Votre Rendez-Vous est programmé le :</string>
    <string name="facultes">Facultés</string>
    <string name="infra_text"> Tous les voyageurs doivent être munis d’un titre de transport valable</string>
    <string name="infra2_text"> Les voyageurs bénéficiant de réduction ou de gratuité, doivent être munis d’un titre de transport valable
</string>
    <string name="infra3_text"> Le voyageur est tenu de présenter un titre de transport valable à toute demande des controleurs de BECK Bus.
</string>
    <string name="infra4_text">Les places assises sont réservées par ordre de priorité aux personnes suivantes:\n
-> Mutilés de guerre et mutilés militaires\n
-> Aveugles civils\n
-> Femmes enceintes\n
-> Personnes âgées de 75 ans et plus
    </string>
    <string name="abonnement_talib">L\'abonnement \'Talib\' vous permet de voyager de façon illimitée en ne payant que 80Dhs/Ligne.</string>

    <string name="info_text">BECK Bus© est une compagnie de bus marocaine créée en 2018 spécialisée dans le transport de voyageurs au niveau de la région \nBéni Mellal - Khénifra.</string>

    <string name="infra5_text">La personne en situation irrégulière a la possibilité de régler immédiatement à tout agent de contrôle de Beck Bus une indemnité forfaitaire de 50DHS</string>
    <string name="infra6_text"> ->Absence de titre de transport\n
-> Violation de l\'interdiction de fumer\n
-> Utilisation d une carte par une personne autre que le              titulaire\n
-> Titre défectueux (déchiré)

</string>
    <string name="title_activity_maps">Map</string>
    <string name="info_text2">La compagnie a pris son acronyme de ses fondateurs Bachchar/El besri/Chahboun/Kichna</string>
</resources>
