<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infractions"
    android:background="#fff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="158dp"
        android:layout_height="69dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="23dp"
        app:srcCompat="@drawable/attention" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_margin="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/infra3_text"
        android:textColor="#211f21"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="301dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="222dp"
        android:text="@string/infra4_text"
        android:textColor="#211f21"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="Infractions"
        android:textColor="#e66f74"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="301dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="384dp"
        android:layout_height="107dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="4dp"

        android:layout_marginStart="0dp"
        android:layout_marginBottom="107dp"
        android:text="@string/infra6_text"
        android:textColor="#211f21"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="2dp"
        android:textAlignment="center"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="107dp"
        android:text="@string/infra5_text"
        android:textColor="#ca0819"
        android:textSize="12sp"
        android:textStyle="bold" />










</LinearLayout>