<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AbonnementActivity"
    android:background="#fff">

    <TextView
        android:id="@+id/texte_talib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/abonnement_talib"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/texte_mowadaf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/abonnement_mowadaf"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/texte_rdv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="70dp"
        android:textSize="30sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:text="@string/texte_rdv"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/texte_rdv"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:text="date de RDV"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"/>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@id/texte_talib"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ligne 01"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>
            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBox1"
                android:text="Ligne 02"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>
            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBox2"
                android:text="Ligne 03"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>
            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBox3"
                android:text="Ligne 04"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>
            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBox4"
                android:text="Ligne 05"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>
            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBox5"
                android:text="Ligne 06"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>
            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBox6"
                android:text="Ligne 07"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/prix_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/conditions"
        android:layout_toStartOf="@+id/prix"
        android:layout_marginTop="30dp"
        android:text="Prix Total : "
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/conditions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:text="0"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/dhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/conditions"
        android:layout_toEndOf="@+id/prix"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:text="Dhs"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <CheckBox
        android:id="@+id/accepter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/date"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="J'accepte"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/date"
        android:layout_toEndOf="@+id/accepter"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="les conditions."
        android:textColor="#0955A8"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rdv"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:text="Choisir une date"
        android:textColor="#ca1212"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"/>
    <Button
        android:id="@+id/rdv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:background="#0955A8"
        android:padding="4dp"
        android:text="Prendre un RDV"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="24sp"
        android:visibility="invisible"/>
    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/abonne_btn"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:background="#0955A8"
            android:layout_marginBottom="50dp"
            android:padding="4dp"
            android:text="Abonné(e)"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/non_abonne_btn"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:background="#0955A8"
            android:padding="4dp"
            android:text="Prise de Rendez-vous"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_code"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="invisible"
        />
</RelativeLayout>